--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, minus?.</p>
                 </div>
                 <div class="facility">
-                    <img src="uding1.jpg" alt="Private Facility">
+                    <img src="lab.jpg" alt="Private Facility">
                     <h3>IMAGE</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, ex..</p>
                 </div>
